# CodeState

./: .gitignore  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  README.codestate.md  README.md  action.yml  history.md  index.html  index.md  setup.py  stats.json  stats.md
.github/workflows/: codestate-pr-report.yml  release-binaries.yml  release.yml
codestate/: analyzer.py  cli.py  visualizer.py
reports/manual/sha-5937ded/: codestate_pr_report.json  index.html  metadata.json
reports/manual/sha-6f36860/: codestate_pr_report.json
reports/manual/sha-90a87a6/: codestate_pr_report.json
reports/manual/sha-9c3d09d/: codestate_pr_report.json
reports/manual/sha-a9e5597/: codestate_pr_report.json  index.html  metadata.json
reports/manual/sha-c2fe048/: codestate_pr_report.json  metadata.json
reports/manual/sha-d8e1e5a/: codestate_pr_report.json
src/: advanced.rs  analyzer.rs  git.rs  main.rs  policy.rs  sca.rs  scanner.rs  search.rs  tui.rs  visualizer.rs
tests/: test_analyzer.py
tools/: codestate_pr_report.py
