[package]
name = "codestate"
version = "2.0.0"
edition = "2021"
authors = ["Henry Lok <ihenrylok@gmail.com>"]
description = "Instant codebase insights in your terminal — fast, local, zero telemetry."
repository = "https://github.com/HenryLok0/CodeState"
readme = "README.md"
documentation = "https://github.com/HenryLok0/CodeState#readme"
license = "MIT"
keywords = ["cli", "metrics", "stats", "loc", "complexity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
ignore = "0.4.21"
rayon = "1.8.0"
git2 = "0.18.2"
comfy-table = "7.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.2"
aho-corasick = "1.1.2"
anyhow = "1.0.75"
rust_xlsxwriter = "0.95.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
